--- a/pom.xml
+++ b/pom.xml
@@ -140,11 +140,19 @@
                                 <layer>cdi</layer>
                                 <layer>jsf</layer>
                                 <layer>jaxrs</layer>
+                                <layer>ejb</layer>
                                 <layer>management</layer>
                             </layers>
                             <excluded-layers>
                                 <layer>deployment-scanner</layer>
                             </excluded-layers>
+                            <cli-sessions>
+                                <cli-session>
+                                    <script-files>
+                                        <script>build/scripts/bootable-jar.cli</script>
+                                    </script-files>
+                                </cli-session>
+                            </cli-sessions>
                         </configuration>
                         <executions>
                             <execution>
@@ -214,11 +222,9 @@
                                 <include>IntegrationTests.java</include>
                             </includes>
                             <systemPropertyVariables>
-                                <projectBuildDirectory>${project.build.directory}
-                                </projectBuildDirectory>
+                                <projectBuildDirectory>${project.build.directory}</projectBuildDirectory>
                                 <arquillian.launch>bootable-jar</arquillian.launch>
-                                <bootable.jar>${project.build.directory}/oss-bootable.jar
-                                </bootable.jar>
+                                <bootable.jar>${project.build.directory}/oss-bootable.jar</bootable.jar>
                                 <arquillian.xml>arquillian.xml</arquillian.xml>
                             </systemPropertyVariables>
                             <redirectTestOutputToFile>false</redirectTestOutputToFile>
