--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Begin Integration Testing Dependencies -->
 
         <dependency>
